# harmony

./: .bandit  .dockerignore  .env.example  .gitignore  .pip-audit.toml  .pre-commit-config.yaml  AGENTS.md  AUDIT-FLOW-002.md  AUDIT-HDM.md  BACKUP  BACKUP.md  CHANGELOG.md  CHANGES_REVIEW.md  Dockerfile  Dockerfile.frontend  Dockerfile.lsio  LICENSE  Makefile  README.md  REPO_MAINTENANCE.md  RUNBOOK_FLOW_002.md  RUNBOOK_HDM.md  SECURITY.md  TODO.md  ToDo.md  alembic.ini  compose.override.yaml  compose.yaml  conftest.py  docker-compose.override.yml  docker-compose.yml  mypy.ini  pip-audit.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
.codex/: permissions.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: auto-merge-codex.yml  autopush.yml  backend-postgres.yml  ci.yml  deps-refresh.yml  docker-image.yml  docker-lsio.yml  docker-publish.yml  frontend-docker.yml  image-unified.yml  nightly.yml  release-check.yml  release.yml  security-autofix.yml  sqlite-guard.yml  uv-lock-guard.yml
aiohttp/: __init__.py
api/: soulseek_router.py
app/: __init__.py  _legacy.py  config.py  db.py  db_async.py  db_migrations.py  dependencies.py  errors.py  logging.py  logging_events.py  main.py  models.py  problem_details.py  schemas.py  schemas_search.py  version.py
app/api/: __init__.py  _deprecation.py  admin_artists.py  artists.py  cache_policy.py  errors.py  health.py  middleware.py  oauth.py  oauth_public.py  openapi_examples.py  openapi_schema.py  router_registry.py  search.py  spotify.py  spotify_free_links.py  system.py  watchlist.py
app/config/: __init__.py  core.py  database.py  settings.py
app/core/: __init__.py  beets_client.py  config.py  errors.py  matching_engine.py  plex_client.py  soulseek_client.py  spotify_cache.py  spotify_client.py  transfers_api.py  types.py
app/hdm/: __init__.py  aggregation.py  completion.py  dedup.py  idempotency.py  models.py  move.py  orchestrator.py  pipeline.py  pipeline_impl.py  recovery.py  runtime.py  tagging.py
app/integrations/: __init__.py  artist_gateway.py  base.py  contracts.py  errors.py  health.py  normalizers.py  plex_adapter.py  provider_gateway.py  registry.py  slskd_adapter.py  slskd_client.py  spotify_adapter.py
app/middleware/: __init__.py  auth_apikey.py  cache.py  cache_conditional.py  cors_gzip.py  csp.py  errors.py  logging.py  rate_limit.py  request_id.py  request_logging.py
app/migrations/: README.md  __init__.py  env.py  helpers.py  script.py.mako
app/oauth/: __init__.py  store_factory.py  store_fs.py  store_memory.py  transactions.py
app/oauth_callback/: __init__.py  app.py
app/ops/: __init__.py  selfcheck.py  selfcheck_ui.py
app/orchestrator/: __init__.py  artist_sync.py  bootstrap.py  dispatcher.py  events.py  handlers.py  handlers_artist.py  providers.py  scheduler.py  timer.py
app/routers/: __init__.py  _deprecation.py  activity_router.py  backfill_router.py  beets_router.py  dlq_router.py  download_router.py  free_ingest_router.py  health_router.py  imports_router.py  integrations.py  matching_router.py  metadata_router.py  plex_router.py  search_router.py  settings_router.py  soulseek_router.py  spotify.py  sync_router.py  (+4 more)
archive/: App.jsx  AppHeader.jsx  BatchHideModal.jsx  BatchNotesModal.jsx  BatchOperationsBar.jsx  DetailsPanel.jsx  HiddenPortsDrawer.jsx  InternalPortDetails.jsx  PortCard.jsx  PortGridItem.jsx  PortTable.jsx  PortTableRow.jsx  SelectionActionButton.jsx  ServerSection.jsx  ServerSectionSkeleton.jsx  ServiceRenameModal.jsx  Sidebar.jsx  StatsSkeleton.jsx  SystemInfoCard.jsx  WhatsNewModal.jsx  constants.js  customServiceNames.js  drawer.jsx  index.css  logger.js  notes.js  postcss.config.cjs  tailwind.config.cjs  tooltip.jsx  useWhatsNew.js  utils.js
core/: soulseek_client.py
docker/: Dockerfile  Dockerfile.lsio  entrypoint-frontend.sh  requirements.txt
docs/: CONTRIBUTING.md  README.md  api.md  architecture.md  backend-guidelines.md  ci-vs-docker.md  code_health_report.md  configuration.md  design-guidelines.md  errors.md  health.md  observability.md  overview.md  project_status.md  secrets.md  security-autofix-checklist.md  security.md  sqlite_migration_smoke_test.md  task-template.md  testing.md  troubleshooting.md  ui-design-guidelines.md  ui_smoke_local.md  worker_watchlist.md  workers.md
fastapi/: __init__.py  concurrency.py
feature/: web_server.py
frontend/: .eslintrc.cjs  .npmrc  BACKUP_FRONTEND  README.md  importmap.json  index.html  jest.config.cjs  jest.config.ts  jest.setup.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.jest.json  tsconfig.json  tsconfig.node.json  tw-animate-css.css  vite.config.ts  vitest.setup.ts
frontend-static/: downloads.html  health.html  index.html  settings.html  spotify.html
jinja2/: __init__.py
pytest_cov/: __init__.py  plugin.py
report/: health-audit.md
reports/: auto_repair_summary.md
scripts/: audit_wiring.py  bandit.py  docker-entrypoint.sh  docs_reference_guard.py  guard_no_legacy_port.py  preflight_volume_check.py  run_diff_coverage_gate.py  security_autofix.py
tests/: README.md  __init__.py  conftest.py  helpers.py  simple_client.py  test_activity.py  test_activity_export.py  test_activity_history.py  test_activity_persistence.py  test_admin_router_toggle.py  test_api_auth.py  test_api_versioning.py  test_artists.py  test_artwork.py  test_autosync.py  test_autosync_credentials.py  test_backfill_router.py  test_backfill_service.py  test_beets.py  test_beets_router.py  test_cache_headers.py  test_cache_store.py  test_config.py  test_config_app_port.py  test_config_database.py  test_config_package.py  test_config_runtime_env.py  test_container_entrypoint_privileges.py  test_database_bootstrap.py  test_database_config.py  test_db_bootstrap.py  test_db_migrations.py  test_discography.py  test_dlq_router.py  test_dlq_service.py  test_docs_reference_guard.py  test_download.py  test_download_credentials.py  test_download_export.py  test_download_filters.py  (+78 more)
utils/: logging_config.py
(+815 files in other folders)
