[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony"
description = "Automation-friendly FastAPI backend for Spotify metadata, Soulseek downloads, and post-processing."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Harmony Maintainers" },
]
license = { file = "LICENSE" }
keywords = ["fastapi", "music", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "sqlalchemy==2.0.31",
    "aiohttp==3.9.5",
    "aiosqlite==0.19.0",
    "spotipy==2.23.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "psutil==5.9.8",
    "mutagen==1.47.0",
    "prometheus-client==0.20.0",
]

[project.scripts]
harmony-selfcheck = "app.ops.selfcheck:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app", "app.*", "jinja2"]

[tool.setuptools.package-data]
app = [
    "ui/templates/**/*.j2",
    "ui/static/**/*",
]

[tool.setuptools.dynamic]
version = { attr = "app.version.__version__" }

[tool.ruff]
line-length = 100
src = ["app", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
combine-as-imports = true
force-sort-within-sections = true
case-sensitive = false
split-on-trailing-comma = true
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = false
