[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony"
description = "Automation-friendly FastAPI backend for Spotify metadata, Soulseek downloads, and post-processing."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Harmony Maintainers" },
]
license = { file = "LICENSE" }
keywords = ["fastapi", "music", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    # Dependencies follow maintained minor-series ranges so operators can
    # consume security patches without repo updates. See CHANGELOG for policy.
    "fastapi>=0.115,<0.200",
    "uvicorn[standard]>=0.30,<0.40",
    "sqlalchemy>=2.0.31,<2.1",
    "aiohttp>=3.12,<3.13",
    "aiosqlite>=0.19,<0.20",
    "spotipy>=2.25,<2.26",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<0.28",
    "psutil>=5.9,<6",
    "mutagen>=1.47,<2",
    "prometheus-client>=0.20,<0.22",
    "starlette>=0.49.1,<0.50",
    "Unidecode>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "libcst >= 1.5, < 1.6",
    "mypy >= 1.10, < 1.11",
    "pip-audit >= 2.7, < 2.8",
    "radon >= 6.0, < 6.1",
    "ruff >= 0.6, < 0.7",
    "vulture >= 2.10, < 2.11",
]

[tool.uv]
# Keep development dependencies synchronized across tool.uv, dependency groups, and optional extras.
dev-dependencies = [
    "libcst >= 1.5, < 1.6",
    "mypy >= 1.10, < 1.11",
    "pip-audit >= 2.7, < 2.8",
    "radon >= 6.0, < 6.1",
    "ruff >= 0.6, < 0.7",
    "vulture >= 2.10, < 2.11",
]

[dependency-groups]
dev = [
    "libcst >= 1.5, < 1.6",
    "mypy >= 1.10, < 1.11",
    "pip-audit >= 2.7, < 2.8",
    "radon >= 6.0, < 6.1",
    "ruff >= 0.6, < 0.7",
    "vulture >= 2.10, < 2.11",
]



[project.scripts]
harmony-selfcheck = "app.ops.selfcheck:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app", "app.*", "jinja2"]

[tool.setuptools.package-data]
app = [
    "ui/templates/**/*.j2",
    "ui/static/**/*",
]

[tool.setuptools.dynamic]
version = { attr = "app.version.__version__" }

[tool.ruff]
line-length = 100
src = ["app"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-sort-within-sections = true
case-sensitive = false
split-on-trailing-comma = true
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

